narrow down domain map impl